src/tailwind.css
@import 'tailwindcss';

@plugin '@tailwindcss/typography';

@layer base {
    html {
        /* Make the default theme neutral */
        @apply theme-bg-neutral-900 theme-text-neutral-200;
    }

    body {
        background-color: var(--color-theme-bg);
        color: var(--color-theme-on-bg);
    }

    .lucide-icon {
        width: 1em;
        height: 1em;
    }
}

@theme {
    --default-transition-duration: 500ms;

    --default-font-family: var(--font-family);
    --default-font-feature-settings: var(--font-feature-settings);

    /*
        Make the default sans font the same as the default font,
        even though it doesn't apply features
    */
    --font-sans: var(--default-font-family);

    /* Spacing Utilities */

    --spacing-xs: --spacing(0.5);
    --spacing-sm: --spacing(1);
    --spacing-md: --spacing(2);
    --spacing-lg: --spacing(4);
    --spacing-xl: --spacing(8);
    --spacing-2xl: --spacing(16);
    --spacing-3xl: --spacing(32);
    --spacing-4xl: --spacing(48);
}

/* If they want to be used with Tailwind utilities, we must pre-define them */
@theme inline {
    --color-theme-on-bg-faint: var(--theme-on-bg-faint);
    --color-theme-on-bg: var(--theme-on-bg);
    --color-theme-on-bg-em: var(--theme-on-bg-em);

    --color-theme-bg: var(--theme-bg);
    --color-theme-bg-1: var(--theme-bg-1);
    --color-theme-bg-2: var(--theme-bg-2);
    --color-theme-bg-3: var(--theme-bg-3);
}

/* Utilities to manage a scoped theme */

@utility theme-text-* {
    /* prettier-ignore */
    --theme-text-color: --value(--color-*, [*]);

    /* For text on the background */
    --theme-on-bg-faint: color-mix(in oklab, var(--theme-text-color), 15% black);
    --theme-on-bg: var(--theme-text-color);
    --theme-on-bg-em: color-mix(in oklab, var(--theme-on-bg), 10% white);
}

@utility theme-bg-* {
    /* prettier-ignore */
    --theme-bg-color: --value(--color-*, [*]);

    /* The background color */
    --theme-bg: var(--theme-bg-color);

    /* For containers placed on top of the background or on each other */
    --theme-bg-1: color-mix(in oklab, var(--theme-bg), 5% white);
    --theme-bg-2: color-mix(in oklab, var(--theme-bg), 12.5% white);
    --theme-bg-3: color-mix(in oklab, var(--theme-bg), 17.5% white);
}

/*
    Making this a CSS class because having control over the actual
    element is important for page transitions.
*/
@layer components {
    .main {
        min-width: 100%;
        min-height: 100%;

        padding-block: var(--spacing-3xl);
    }

    .main__article {
        padding-inline: var(--spacing-lg);

        /*
            On the low side for line length
            https://baymard.com/blog/line-length-readability
        */
        @apply max-w-prose;
    }
}

/*
    utilities for centering along an axis for absolute positioning
    @utility so they can be used with variants
*/

@utility center-x {
    --center-x-transform: translateX(-50%);
    left: 50%;
    @apply center-transform;
}

@utility center-y {
    --center-y-transform: translateY(-50%);
    top: 50%;
    @apply center-transform;
}

@utility center-transform {
    transform: var(--center-x-transform,) var(--center-y-transform,);
}

@utility leading-base {
    /* resets the normal line height to the same as the base font size */
    line-height: calc(var(--tw-leading, var(--leading-normal)) * var(--text-base));
}

/* this is the simplest way to default the prose styles as far as I've seen */
@utility prose {
    /* I don't love using @apply but it has its place here */
    @apply prose-neutral prose-invert;
}

@custom-variant supports-variable-font {
    @supports (font-variation-settings: normal) {
        @slot;
    }
}

@custom-variant hocus (&:focus-within, &:hover);

